fixed form spacing

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ p {
 
 .botdiv {
     text-align:center; 
-    padding:0% 20%; 
+    padding:0% 40%; 
     margin:4%; 
     resize: none;
 }
